# eclipse-calc

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml
docs/: API.md
examples/: spain_2026.py
src/eclipse_calc/: __init__.py  _time.py  central_line.py  constants.py  contacts.py  elements.py  ellipsoid.py  ephemeris.py  observer.py  polynomial.py  shadow.py  terminator.py  types.py
tests/: conftest.py  test_central_line.py  test_elements.py  test_local_circumstances.py  test_shadow.py  test_terminator.py
