[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eclipse-calc"
version = "0.1.0"
description = "Besselian solar eclipse geometry: contacts, central line, umbral/penumbral shadow outline, N/S limits, and terminator-limited path edges, computed directly from JPL ephemeris via Skyfield."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "komakallio" }]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "skyfield>=1.45",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff", "mypy"]
examples = ["matplotlib"]

[tool.hatch.build.targets.wheel]
packages = ["src/eclipse_calc"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
